<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/textview_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/unit_one_string"
            app:layout_constraintBottom_toTopOf="@id/resident_button_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_first" />

        <Button
            android:id="@+id/resident_button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_one_string"
            android:drawableTop="@drawable/profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/resident_button_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"/>

        <Button
            android:id="@+id/resident_button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_two_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resident_button_one"
            app:layout_constraintTop_toBottomOf="@id/textview_first"/>

        <Button
            android:id="@+id/resident_button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_three_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/resident_button_four"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resident_button_one"/>

        <Button
            android:id="@+id/resident_button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_four_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resident_button_three"
            app:layout_constraintTop_toBottomOf="@id/resident_button_two"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>