<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            app:layout_constraintBottom_toTopOf="@id/textview_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/unit_two_string"
            app:layout_constraintBottom_toTopOf="@id/resident_button_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_second" />

        <Button
            android:id="@+id/resident_button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_five_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/resident_button_six"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_second"/>

        <Button
            android:id="@+id/resident_button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_six_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resident_button_five"
            app:layout_constraintTop_toBottomOf="@id/textview_second"/>

        <Button
            android:id="@+id/resident_button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_seven_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/resident_button_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resident_button_five"/>

        <Button
            android:id="@+id/resident_button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resident_eight_string"
            android:drawableTop="@drawable/profile_icon"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resident_button_seven"
            app:layout_constraintTop_toBottomOf="@id/resident_button_six"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>